--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	</head>
 	<body>
 		<p>Finally somewhere to make a website
-			<a href="url">github.com</a>
+		<a href="url">github.com</a>
+		<script>
+			alert("hi");
+		</script>
 	</body>
 </html>
