Created the Mauntcres wiki

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Index</title>
-		<h1>Main page</h1>
+		<title>Cevenaris's Website</title>
 	</head>
 	<body>
-		<p>Finally somewhere to make a website
-		<a href="url">github.com</a>
-		<script>
-			alert("hi");
-		</script>
+		<style>
+			.main {
+				text-align: center;
+				font-family: sans-serif;
+				background: white;
+			}
+		</style>
+		<h1>Select project
+		<a href="/Mauntcres/wiki/Mauntcres_(disambiguation).html">Mauntcres wiki</a>
 	</body>
 </html>
