Finished the format page and made some content pages

--- a/Mauntcres/wiki/Mauntcres_(city).html
+++ b/Mauntcres/wiki/Mauntcres_(city).html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="../pageFormat.css" type="text/css">
         <base href="https://cevenaris.github.io/Mauntcres/wiki/">
         <meta charset="utf-8">
-        <title>Page Format</title>
+        <title>Mauntcres (city)</title>
         <meta name="description" content="Base for most other wiki pages">
         <meta name="author" content="cevenaris">
         <meta name="keywords" content="Mauntcres">
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="header">
-            <h1>Page title</h1>
+            <h1>Mauntcres (city)</h1>
         </div>
 
         <div class="topNav">
