updated file location to avoid a 404 error

--- a/tests/cheerpj_tutorial/cheerpj_tutorial.html
+++ b/tests/cheerpj_tutorial/cheerpj_tutorial.html
@@ -10,6 +10,6 @@
   <script>
       cheerpjInit();
       cheerpjCreateDisplay(800,600);
-      cheerpjRunJar("/app/TextDemo.jar"); 
+      cheerpjRunJar("/app/tests/cheerpj_tutorial/TextDemo.jar"); 
   </script>
 </html>
