--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     
     <body>
-        <a href="/exports/index.html>web game test</a>
+        <a href="/exports/index.html">web game test</a>
 
         <!-- Optional JavaScript; choose one of the two! -->
 
